[tool.poetry]
name = "gnd-dashboard"
version = "0.1.0"
description = ""
authors = ["Nico Wagner <n.wagner@dnb.de>"]
license = "CC0-1.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 120
target_version = ['py36']
include = '\.pyi?$'

[tool.poetry.dependencies]
python = "3.9.*"
pandas = "^1.3.3"
streamlit = "^1.8.1"
altair = "^4.2.0"
pydeck = "^0.7.1"
wordcloud = "^1.8.1"

[tool.poetry.dev-dependencies]
black = "^21.9b0"

